# VirtualKB

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md
res/textures/: 1.json  Okayge.json  PepegaFlash-Sheet.json  PepegaGun-Sheet.json  PepegaHacker-Sheet.json  hitmanSprint-Sheet.json  looking.json
src/: animation.cpp  animation.hpp  app.rc  input_handler.hpp  keyboard_media.cpp  keyboard_media.hpp  main.cpp
